@@ -4,9 +4,6 @@ import com.library.dto.mapper.Mapper;
 import com.library.dto.request.PurchaseRequestDto;
 import com.library.dto.response.PurchaseResponseDto;
 import com.library.persistence.entity.Book;
-import com.library.persistence.entity.CreditCard;
-import com.library.persistence.entity.Purchase;
-import com.library.persistence.entity.User;
 import com.library.persistence.entity.composite.BookPurchaseKey;
 import com.library.persistence.entity.joinEntity.BookPurchase;
 import com.library.persistence.repository.BookRepository;
@@ -17,6 +14,7 @@ import jakarta.persistence.EntityNotFoundException;
 import jakarta.transaction.Transactional;
 import jakarta.validation.Valid;
 import lombok.RequiredArgsConstructor;
+import lombok.val;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.Pageable;
@@ -24,9 +22,9 @@ import org.springframework.stereotype.Service;
 import org.springframework.validation.annotation.Validated;
 
 import java.math.BigDecimal;
+import java.time.LocalDate;
+import java.util.ArrayList;
 import java.util.List;
-import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 @Validated
@@ -45,69 +43,66 @@ public class PurchaseService {
 
     @Transactional
     public PurchaseResponseDto createPurchase(@Valid PurchaseRequestDto purchaseRequestDto) {
-        User user = userRepository.findById(purchaseRequestDto.getUserId())
+        val user = userRepository.findById(purchaseRequestDto.getUserId())
                 .orElseThrow(() -> new EntityNotFoundException("User not found with id: " + purchaseRequestDto.getUserId()));
 
-        CreditCard creditCard = creditCardRepository.findById(purchaseRequestDto.getCreditCardId())
+        val creditCard = creditCardRepository.findById(purchaseRequestDto.getCreditCardId())
                 .orElseThrow(() -> new EntityNotFoundException("Credit Card not found with id: " + purchaseRequestDto.getCreditCardId()));
 
-        List<Book> books = bookRepository.findAllById(purchaseRequestDto.getBookIds());
+        val books = bookRepository.findAllById(purchaseRequestDto.getBookIds());
 
-        Purchase purchase = mapper.toEntity(purchaseRequestDto);
+        val purchase = mapper.toEntity(purchaseRequestDto);
         purchase.setUser(user);
         purchase.setCreditCard(creditCard);
         purchase.setTotalPrice(books.stream()
                 .map(Book::getPrice)
                 .reduce(BigDecimal.ZERO, BigDecimal::add));
+        purchase.setDate(LocalDate.now());
 
-        Purchase savedPurchase = purchaseRepository.save(purchase);
+        val savedPurchase = purchaseRepository.save(purchase);
+        val bookPurchases = new ArrayList<BookPurchase>();
         for (Book book : books) {
-            BookPurchaseKey bookPurchaseKey = new BookPurchaseKey();
-            bookPurchaseKey.setBookId(book.getId());
-            bookPurchaseKey.setPurchaseId(savedPurchase.getId());
-            BookPurchase bookPurchase = new BookPurchase();
-            bookPurchase.setId(bookPurchaseKey);
-            bookPurchase.setBook(book);
-            bookPurchase.setPurchase(savedPurchase);
-            book.getBookPurchases().add(bookPurchase);
+            BookPurchaseKey bookPurchaseKey = BookPurchaseKey.builder()
+                    .bookId(book.getId())
+                    .purchaseId(savedPurchase.getId())
+                    .build();
+            BookPurchase bookPurchase = BookPurchase.builder()
+                    .id(bookPurchaseKey)
+                    .book(book)
+                    .purchase(savedPurchase)
+                    .build();
+            bookPurchases.add(bookPurchase);
         }
+        savedPurchase.setBookPurchases(bookPurchases);
+        purchaseRepository.save(savedPurchase);
 
-        PurchaseResponseDto purchaseResponseDto = mapper.toDto(savedPurchase, purchaseRequestDto.getBookIds());
-        purchaseResponseDto.setBookIds(purchaseRequestDto.getBookIds());
-        return purchaseResponseDto;
+        return mapper.toDto(savedPurchase);
     }
 
     public Page<PurchaseResponseDto> findAllPurchases(Pageable pageable) {
-        Page<Purchase> purchases = purchaseRepository.findAll(pageable);
-        List<PurchaseResponseDto> purchaseResponseDtos = purchases.stream()
-                .map(purchase -> {
-                    List<Long> bookIds = purchase.getBookPurchases().stream()
-                            .map(bookPurchase -> bookPurchase.getBook().getId())
-                            .collect(Collectors.toList());
-                    return mapper.toDto(purchase, bookIds);
-                })
-                .collect(Collectors.toList());
+        val purchases = purchaseRepository.findAll(pageable);
+        val purchaseResponseDtos = purchases.stream().map(mapper::toDto).toList();
         return new PageImpl<>(purchaseResponseDtos, pageable, purchases.getTotalElements());
     }
 
     public Page<PurchaseResponseDto> findPurchaseByUserId(Long userId, Pageable pageable) {
-        Optional<User> userOptional = userRepository.findById(userId);
+        val userOptional = userRepository.findById(userId);
 
         if (userOptional.isPresent()) {
-            User user = userOptional.get();
-            List<Purchase> purchases = user.getPurchases();
+            val user = userOptional.get();
+            val purchases = user.getPurchases();
 
-            List<PurchaseResponseDto> purchaseResponseDtos = purchases.stream()
+            val purchaseResponseDtos = purchases.stream()
                     .map(purchase -> {
                         List<Long> bookIds = purchase.getBookPurchases().stream()
                                 .map(bookPurchase -> bookPurchase.getBook().getId())
-                                .collect(Collectors.toList());
+                                .toList();
 
-                        PurchaseResponseDto purchaseResponseDto = mapper.toDto(purchase, bookIds);
+                        val purchaseResponseDto = mapper.toDto(purchase);
                         purchaseResponseDto.setBookIds(bookIds);
                         return purchaseResponseDto;
                     })
-                    .collect(Collectors.toList());
+                    .toList();
             return new PageImpl<>(purchaseResponseDtos, pageable, purchaseResponseDtos.size());
         } else {
             throw new EntityNotFoundException("User Purchase not found with User ID: " + userId);
@@ -115,7 +110,7 @@ public class PurchaseService {
     }
 
     public void deletePurchaseByUserId(Long userId) {
-        List<Purchase> purchases = userRepository.findById(userId).get().getPurchases();
+        val purchases = userRepository.findById(userId).get().getPurchases();
         purchaseRepository.deleteAll(purchases);
     }
 }
