@@ -3,20 +3,18 @@ package com.library.service;
 import com.library.dto.mapper.Mapper;
 import com.library.dto.request.RoleRequestDto;
 import com.library.dto.response.RoleResponseDto;
-import com.library.persistence.entity.Role;
 import com.library.persistence.repository.RoleRepository;
 import jakarta.persistence.EntityNotFoundException;
 import jakarta.validation.Valid;
 import lombok.RequiredArgsConstructor;
+import lombok.val;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.validation.annotation.Validated;
 
-import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 @Validated
@@ -28,33 +26,33 @@ public class RoleService {
     private final Mapper mapper;
 
     public RoleResponseDto createRole(@Valid RoleRequestDto roleRequestDto) {
-        Role role = mapper.toEntity(roleRequestDto);
-        Role savedRole = roleRepository.save(role);
+        val role = mapper.toEntity(roleRequestDto);
+        val savedRole = roleRepository.save(role);
         return mapper.toDto(savedRole);
     }
 
     public Page<RoleResponseDto> findAllRoles(Pageable pageable) {
-        Page<Role> roles = roleRepository.findAll(pageable);
-        List<RoleResponseDto> roleResponseDtos = roles.stream()
+        val roles = roleRepository.findAll(pageable);
+        val roleResponseDtos = roles.stream()
                 .map(mapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
         return new PageImpl<>(roleResponseDtos, pageable, roles.getTotalElements());
     }
 
     public Optional<RoleResponseDto> findRoleById(Long id) {
-        Optional<Role> roleOptional = roleRepository.findById(id);
+        val roleOptional = roleRepository.findById(id);
         return roleOptional.map(mapper::toDto);
     }
 
     public RoleResponseDto updateRole(Long id, @Valid RoleRequestDto roleRequestDto) {
-        Role role = roleRepository.findById(id)
+        val role = roleRepository.findById(id)
                 .orElseThrow(() -> new EntityNotFoundException("Role not found with id: " + id));
 
-        Role updatedRole = mapper.toEntity(roleRequestDto);
+        val updatedRole = mapper.toEntity(roleRequestDto);
         updatedRole.setId(id);
         updatedRole.setUserRoles(role.getUserRoles());
 
-        Role savedRole = roleRepository.save(updatedRole);
+        val savedRole = roleRepository.save(updatedRole);
         return mapper.toDto(savedRole);
     }
 
